--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,7 @@ jobs:
       - uses: actions/checkout@v2 
       - name: yarn install
         run: yarn install
+      - name: start server
+        run: yarn start
       - name: run test
-        run: yarn run cy:run --spec=./cypress/integration/counter.test.ts
+        run: yarn test
