--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
       - name: start server
         run: yarn start &
       - name: run test
-        run: yarn test
+        run: yarn run cy:run --spec=./cypress/integration/counter.test.ts
