--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dependencies": {
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "yarn": "^1.22.17"
+        "yarn": "^1.22.17",
+        "webpack": "^5.64.0",
+        "webpack-cli": "^4.9.1"
     },
     "devDependencies": {
         "@types/cypress": "^1.1.3",
@@ -38,8 +40,6 @@
         "ts-loader": "^9.2.6",
         "ts-node": "^10.4.0",
         "typescript": "^4.4.4",
-        "webpack": "^5.64.0",
-        "webpack-cli": "^4.9.1",
         "webpack-dev-server": "^4.4.0"
     }
 }
